<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_dialog_rounded"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/diet_icon"
        android:contentDescription="@string/app_icon"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:text="@string/diet_schedule_app"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/swe_students"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/course_descrption"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/submitted_to_mr_aschalow"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCloseDialog"
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#083765"
        android:textColor="#fff100"/>
</LinearLayout>
