<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical" >

    <TextView
        android:text="@string/add_food"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="#083875"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etFoodName"
        android:autofillHints="true"
        android:hint="@string/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/etCalorie"
        android:autofillHints="true"
        android:hint="@string/calories"
        android:inputType="number"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/etGram"
        android:autofillHints="true"
        android:hint="@string/gram"
        android:inputType="number"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <Spinner
        android:id="@+id/spType"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDate"
        android:autofillHints="true"
        android:hint="@string/date"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"/>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save_food"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:backgroundTint="#083765"
        android:textColor="#fff100"
        android:textSize="20sp"/>


</LinearLayout>
</ScrollView>
