<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:text="@string/createAccount"
            android:textSize="27sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#083765"/>

        <EditText
            android:id="@+id/etUsername"
            android:autofillHints="true"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@android:drawable/editbox_background_normal"/>

        <EditText
            android:id="@+id/etEmail"
            android:autofillHints="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@android:drawable/editbox_background_normal"/>

        <EditText
            android:id="@+id/etPassword"
            android:autofillHints="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"/>

        <Button
            android:id="@+id/btnSignup"
            android:text="@string/signup"
            android:layout_marginTop="20dp"
            android:padding="15sp"
            android:textSize="23sp"
            android:textColor="#fff100"
            android:backgroundTint="#083765"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLogin"
            android:text="@string/loginLocator"
            android:textColor="#1E88E5"
            android:textSize="17sp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

